<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SnackbarActivity">

    <Button
        android:id="@+id/buttonSimpleSnackbar"
        android:layout_width="233dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/simple_snackbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonActionCallback"
        android:layout_width="232dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/action_callback_snakebar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSimpleSnackbar" />

    <Button
        android:id="@+id/buttonCustomView"
        android:layout_width="231dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:text="@string/custom_view_snakebar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonActionCallback" />
</android.support.constraint.ConstraintLayout>